# TaskParallelLibrary

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  demo.cpp
include/tpl/: thread_pool.hpp  tplexcept.hpp  tpltasks.hpp
